7/14/11 #3008, fix amplitude text field so that there won't be a width issue with Simpified and Traditional Chinese
# 3.05.02 (54080) Jul 14, 2011
> charts display wavelength and period values that correspond to the audible fundamental frequency (440 Hz)
> x-axis units are meters (m) instead of millimeters (mm) for space domains
> improved internationalization of x-axis labels and units
7/14/11 #2981, refactor duplicate code in WaveformChart, improve doc
7/14/11 #2981, eliminate duplicate code in GameSumChart by subclassing DiscreteSumChart
7/14/11 #2981, consolidate duplicate chart code into WaveformChart
7/14/11 #2981, change x-axes in Games module. leveraging what was done in Discrete module
7/14/11 #2981, create label tables to map L=1 to actual time and space domain values for x-axis charts in Discrete module (lots of duplicate code)
7/14/11 get images for maximize and minimize buttons from phetcommon, delete local copies
7/13/11 #2981, internal rename of Harmonics to Components in Discrete-to-Continuous module, since that's the visible name
7/13/11 #2981, change space units from mm to m throughout
7/13/11 #2981, add symbolic constant to FourierConstants for fundamental frequency (A440)
7/13/11 #2981, added missing i18n of x-axis labels for Sum and Harmonic charts
# 3.05.01 (52684) Jun 6, 2011
6/6/11 > hide disabled clock controls
6/6/11 #2915, hide disabled clock controls
# 3.05.00 (52637) Jun 4, 2011
6/4/11 > added new translation credits features
# 3.04.01 (52613) Jun 2, 2011
8/24/10 switch to phetcommon Vector2D for "wiggle me", #2467
# 3.04.00 (38001) Jan 9, 2010
1/9/10 public version for milestone "full redeploy, 2010 Q1"
# 3.03.01 (37355) Dec 11, 2009
12/11/09 test version for milestone "full redeploy, 2010 Q1"
# 3.03.00 (30610) Apr 20, 2009
4/20/09 Batch deploy as part of IOM milestone with revision 30609
# 3.02.03 (30125) Mar 31, 2009
3/31/09 deploy dev version for verification
3/25/09 #1545, widen and right-justify amplitude text fields