@@ -1,3 +1,5 @@
+7/14/11 #2981, show x-axis tick labels only for leftmost and rightmost major ticks in waveform charts
+7/14/11 #2981, change x-axis labels from 3 to 2 decimal places
 7/14/11 #3008, fix amplitude text field so that there won't be a width issue with Simpified and Traditional Chinese
 # 3.05.02 (54080) Jul 14, 2011
 > charts display wavelength and period values that correspond to the audible fundamental frequency (440 Hz)
